terraform/test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-acme-route
  namespace: default
spec:
  parentRefs:
  - name: eg-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /.well-known/acme-challenge/
    backendRefs:
    - name: cm-acme-http-solver-8wz4w
      port: 8089
